# PAID

./: .env.example  .gitignore  README.md  pyproject.toml
outputs/: example_climbing_app.md
scripts/: export_prd.py  test_deepgram.py
src/paid/: __init__.py  defaults.py
src/paid/agents/: __init__.py  anthropic_deepgram_agent.py  base.py  deepgram_agent.py  design_agent.py  visual_agents.py  voice_agent.py  voice_assistant_agent.py
src/paid/database/: __init__.py  models.py  operations.py
src/paid/frontend/: __init__.py  app.py  export.py
tests/: test_basic.py
